--- a/meson.build
+++ b/meson.build
@@ -1,9 +1,26 @@
-project('pld-managerd', 'cpp',
+project(
+  'pld-managerd',
+  'cpp',
   version : '0.1',
-  default_options : ['warning_level=3',
-                     'cpp_std=c++20'])
+  default_options : [
+    'warning_level=3',
+    'cpp_std=c++20'
+  ]
+)
 
-exe = executable('pld_managerd', 'src/pld_managerd.cpp',
-  install : true)
+executable(
+  'pld-managerd',
+  'src/pld_managerd.cpp',
+  install : true,
+  install_dir: get_option('bindir')
+)
 
-test('basic', exe)
+systemd = dependency('systemd')
+conf_data = configuration_data()
+conf_data.set('bindir', get_option('prefix') / get_option('bindir'))
+configure_file(
+  input: 'pld-manager.service.in',
+  output: 'pld-manager.service',
+  configuration: conf_data,
+  install: true,
+  install_dir: systemd.get_pkgconfig_variable('systemdsystemunitdir'))
