Temporarily implement to-cpld ready/hrbt func
These func shall be moved to the pid fan control module in the future.

%% original patch: 0001-Temporarily-implement-to-cpld-ready-hrbt-func.patch

--- a/meson.build
+++ b/meson.build
@@ -9,6 +9,7 @@ project(
 )
 
 deps = [
+  dependency('libgpiodcxx', fallback: ['libgpiod', 'gpiodcxx_dep'], default_options: ['bindings=cxx']),
   dependency('systemd'),
   dependency('sdbusplus', fallback: ['sdbusplus', 'sdbusplus_dep']),
 ]
